syntax = "proto3";

option java_package = "pt.up.fc.dcc.hyrax.odlib.protoc";
option java_outer_classname = "ODProto";
import "google/protobuf/empty.proto";


message Detection {
    float score = 1;
    int32 class = 3;
}

message Job {
    string id = 1; // uuid
    bytes data = 2;
}

message RequestStatus {
    enum Code {
        Success = 0;
        Error = 1;
        Waiting = 2;
    }
    Code code = 1;
}

message JobResults {
    RequestStatus.Code status = 1;
    repeated Detection detections = 2;
    string id = 3; // uuid
}

message Models {
    repeated Model models = 1;
}

message Model {
    int32 id = 1;
    string name = 2;
    string url = 3;
    bool downloaded = 4;
}

message ModelConfig {
    Model model = 1;
    map<string, string> configs = 2;
}

message AsyncRequest {
    Job job = 1;
    string id = 2;
}

message Worker {
    RequestStatus.Code status = 1;

    string id = 2; // uuid

    int32 battery = 3;
    int32 batteryStatus = 4;

    int32 cpuCores = 5;
    int32 queueSize = 6;
    int32 runningJobs = 7;

    int32 avgTimePerJob = 8;
    int32 bandwidthEstimate = 9; // KB/s
}

message Ping {
    bytes data = 1;
    bool reply = 2;
}

message Service {
    enum Type {
        SCHEDULER = 0;
        WORKER = 1;
    }
    Type type = 1;
    bool running = 2;
}

message ServiceStatus {
    repeated Service service = 1;
}

message ServiceRequest {
    repeated Service.Type type = 1;
}

message Scheduler {
    enum Type {
        Success = 0;
        Error = 1;
        Waiting = 2;
    }
    Type code = 1;
}

service BrokerService {
    rpc ping (Ping) returns (Ping) {};
    rpc executeJob (Job) returns (JobResults) {}; // Send to Worker
    rpc scheduleJob (Job) returns (JobResults) {}; // Send to Scheduler
    //rpc getServiceStatus(ServiceRequest) returns (ServiceStatus) {};
    //rpc advertiseServiceStatus(ServiceStatus) returns (Status) {};
    rpc advertiseWorkerStatus(Worker) returns (RequestStatus) {}; // Broker Externo > Broker
    rpc diffuseWorkerStatus(Worker) returns (RequestStatus) {}; // Worker > Broker
    rpc updateWorkers(google.protobuf.Empty) returns (google.protobuf.Empty) {};

    rpc getModels(google.protobuf.Empty) returns (google.protobuf.Empty) {};
    rpc setModel(google.protobuf.Empty) returns (google.protobuf.Empty) {};

}

service SchedulerService { // Broker interno > Scheduler
    rpc schedule (Job) returns (Worker) {};
    rpc notify (Worker) returns (RequestStatus) {};
    rpc setScheduler (Scheduler) returns (RequestStatus) {};
}

service WorkerService { // Broker interno > Worker
    rpc execute (Job) returns (JobResults) {};
}

